modify contributors' name

--- a/NBA_All-Star_Analysis.ipynb
+++ b/NBA_All-Star_Analysis.ipynb
@@ -8,10 +8,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By: Bill Makwae, Ayush Vora, Ray Nguyen, QingRu Kong"
+    "By: Bill Makwae, Ayush Vora, Ray Nguyen, QingRu Kong <br/>\n",
+    "Modified by: Ray Nguye, Jeffrey Song, Emilio Dorador, Berkay Talha Acar"
    ]
   },
   {
