Revert "Merge pull request #10 from rhysong/R-func"
This reverts commit d2af04880ef40f819808c1fcd42e3533e0bce179, reversing
changes made to 43bbd432ad1454c8f918fdb5c4a02ff36ffb88d2.

--- a/analysis_RMD_file.Rmd
+++ b/analysis_RMD_file.Rmd
@@ -56,7 +56,8 @@ We then read another dataset from online using `read_csv()`, which lists every A
 ```{r}
 all_stars <- read_csv("https://raw.githubusercontent.com/RayNguyent/DSCI-100-project/develop/data/all_stars_2000_2016.csv")
 all_stars_filtered <- all_stars %>% 
-    filter(Year <= 2015 & Year >= 2011) %>%  select(Year, Player) %>% 
+    filter(Year <= 2015 & Year >= 2011) %>% 
+    select(Year, Player) %>% 
     mutate(Is_All_Star = "All Star")
 head(all_stars_filtered)
 ```
